tests/fixtures/invalid/pow_none_int_none.py
# Cannot call pow() with None, Int, None
x = pow(None, 1, None)
